Fim da aula 19/06

--- a/overview/index.html
+++ b/overview/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Primeira página de back-end avançado</title>
 
-    <script src="js/index.js" defer></script>
+    <script src="js/index.js" defer></script> <!--defer- carrega o javascript mas não executa-->
 
 </head>
 <body>
+    
     
 </body>
 </html>
